[package]
name = "holmes_spartan"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[[bin]]
name = "range_nizk"
path = "src/range_nizk.rs"

[[bin]]
name = "range_snark"
path = "src/range_snark.rs"

[[bin]]
name = "chisquare_snark"
path = "src/chisquare_snark.rs"

[[bin]]
name = "chisquare_nizk"
path = "src/chisquare_nizk.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = {version = "3.2.0", features = ["serde", "simd_backend"]}
merlin = "3.0.0"
rand = "0.7.3"
digest = "0.8.1"
sha3 = "0.8.2"
byteorder = "1.3.4"
rayon = "1.6.1"
serde = { version = "1.0.106", features = ["derive"] }
bincode = "1.2.1"
subtle = { version = "2.4", default-features = false }
rand_core = { version = "0.5", default-features = false }
zeroize = { version = "1", default-features = false }
itertools = "0.10.0"
colored = "2.0.0"
flate2 = "1.0.14"
thiserror = "1.0"
spartan = "0.8.0"